<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/relative_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue">
        <ImageView
            android:id="@+id/back_rl"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="@dimen/interval12"
            android:layout_centerVertical="true"
            android:src="@drawable/finish" />
        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personnelManage"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative_title"
        android:layout_above="@+id/text_confirm"
        android:fadeScrollbars="true"
        android:fillViewport="true"
        android:background="@color/background">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin16"
                android:text="@string/chefPort"
                android:textSize="@dimen/size24"
                android:textColor="@color/black"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_chef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin16"
                android:text="@string/waiterPort"
                android:textSize="@dimen/size24"
                android:textColor="@color/black"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_waiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/text_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/interval8"
        android:background="@color/blue"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="@dimen/size24"/>
</RelativeLayout>