<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue">
        <ImageView
            android:id="@+id/back_rl"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="@dimen/interval8"
            android:layout_centerVertical="true"
            android:src="@drawable/finish" />
        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/terraceFunctionException"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/text_sumbit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="@dimen/margin16"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height128"
            android:layout_margin="@dimen/margin16"
            android:hint="@string/inFeedback"
            android:gravity="top"
            android:background="@null"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_images"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin16"/>
    </LinearLayout>
</LinearLayout>