<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin16">
    <ImageView
        android:id="@+id/image_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_personnel_manage"
        android:layout_centerVertical="true"
        android:visibility="visible"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_toRightOf="@+id/image_photo"
        android:layout_weight="2"
        android:visibility="visible"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="userName"
            android:textSize="@dimen/size24"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="userName"
            android:textSize="@dimen/size16"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:id="@+id/text_addPersonnel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin16"
        android:background="@color/background"
        android:padding="@dimen/interval8"
        android:text="@string/addPersonnel"
        android:textColor="@color/black"
        android:textSize="@dimen/size24"
        android:visibility="gone" />
    <TextView
        android:id="@+id/text_disable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/text_delete"
        android:background="@color/background"
        android:padding="@dimen/interval8"
        android:text="@string/disable"
        android:textColor="@color/black"
        android:textSize="@dimen/size24"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/text_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@color/red"
        android:padding="@dimen/interval8"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="@dimen/size24"
        android:visibility="visible"/>
</RelativeLayout>