<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue">

        <RelativeLayout
            android:id="@+id/back_rl"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingLeft="16dp">
            <ImageView
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:src="@drawable/finish" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedbackRecird"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/linear_terraceFunctionException"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/interval8"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terraceFunctionException"
                android:textSize="@dimen/size16"
                android:textColor="@color/blue"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line1"
                android:layout_marginTop="@dimen/interval8"
                android:background="@color/blue"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_distributionIssue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/interval8"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distributionIssue"
                android:textSize="@dimen/margin16"
                android:textColor="@color/black"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line1"
                android:layout_marginTop="@dimen/interval8"
                android:background="@color/blue"
                android:visibility="invisible"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_productSuggest"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/interval8"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productSuggest"
                android:textSize="@dimen/size16"
                android:textColor="@color/black"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line1"
                android:layout_marginTop="@dimen/interval8"
                android:background="@color/blue"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>
    <com.example.xxxloli.zshmerchant.view.PagerSlidingTabStrip
        android:id="@+id/page_tabs"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:background="@color/white"
        app:pstsDividerColor="@android:color/transparent"
        app:pstsIndicatorColor="@color/blue"
        app:pstsIndicatorHeight="1dp"
        app:pstsIndicatorWrap="true"
        app:pstsScaleZoomMax="0"
        app:pstsShouldExpand="true"
        app:pstsTextSelectedColor="@color/blue"
        app:pstsUnderlineColor="@color/colorAccent"
        app:pstsUnderlineHeight="0dp"
        app:pstsTabBackground="?attr/selectableItemBackground" />
    <android.support.v4.view.ViewPager
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>